fix: changed gap between nav and top

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -20,8 +20,7 @@ a:not([class]):hover{
   margin-left: @navWidth;
   pointer-events: auto;
   background-color: @contentBackground;
-  margin-top: 0;
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 /* Fix for mobile browsers which 100vh contains browser address bar */
@@ -84,6 +83,6 @@ body{
 
 @media (max-width: @responsiveThreshold) {
   .container{
-    padding-top: 60px;
+    padding-top: 70px;
   }
 }
