--- a/src/styles/index/index.less
+++ b/src/styles/index/index.less
@@ -64,6 +64,7 @@
 
 .pager-wrapper{
   margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 @media (max-width: calc(@navWidth + @commonContentWidth + @minimalContentBlank)){
